# Ragged

./: .gitignore  config.py  embedding.py  main.py  plan.txt   pyproject.toml
migrations/: env.py
migrations/versions/: 13583cb2f6e7_.py  4dc312511c19_.py  57c7e0f82237_.py  af912cb5aca8_.py  ec00db18c979_.py
src/: calculations.py  embedding.py  tests.py
src/ai/: calculations.py  data.py  eval.py  llm_service.py  models.py  retriever.py
src/api/: repository.py  router.py
src/auth/: registration.py  router.py  service.py
src/chat/: dependencies.py  models.py  repository.py  router.py  schemas.py  service.py  utils.py
src/chat/test/: index.html  script.js
src/core/: db.py  dependencies.py  exceptions.py
src/docs/: dependencies.py  models.py  process_file.py  repository.py  router.py  schemas.py  service.py
src/workspaces/: dependencies.py  models.py  repository.py  router.py  schemas.py  service.py
