[project]
name = "ragged"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "aiofiles>=25.1.0",
    "alembic>=1.18.4",
    "asyncpg>=0.31.0",
    "fastapi>=0.136.3",
    "loguru>=0.7.3",
    "numpy>=2.4.6",
    "openai>=2.38.0",
    "pgvector>=0.4.2",
    "pwdlib[argon2]>=0.3.0",
    "pydantic-settings>=2.14.1",
    "pyjwt>=2.13.0",
    "pypdf>=6.13.2",
    "python-docx>=1.2.0",
    "python-multipart>=0.0.32",
    "sentence-transformers>=5.5.1",
    "sqlalchemy>=2.0.50",
    "uvicorn[standard]>=0.48.0",
]

[tool.pyright]
venvPath = "."
venv = ".venv"
